--- a/trab/css/estilo.css
+++ b/trab/css/estilo.css
@@ -143,7 +143,7 @@ button#trip{
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    /*background-size: cover;*/
 }
 
 .py-6
