--- a/trab/css/estilo.css
+++ b/trab/css/estilo.css
@@ -139,11 +139,11 @@ button#trip{
     /* Full height */
     height: 100%; 
 
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    /* Create the parallax scrolling effect 
+    background-attachment: fixed;*/
     background-position: center;
     background-repeat: no-repeat;
-    /*background-size: cover;*/
+    background-size: cover;
 }
 
 .py-6
